tests/NormalTests/paczka2/big_fuzzy/38808142.err
Error in line 3: eop S64 94,3
Error in line 5: eop S111 93,9
Error in line 6: 1F0 S631 38,8
Error in line 29: eop S64 63,00
Error in line 22: eop S64 19,8
Error in line 32: rc8eFBdd0Q A95 63,71
Error in line 35: bqjBmI S631 207,2
Error in line 11: A95 S64 95,1
Error in line 48: Xlm S631 79,3
Error in line 52: rc8eFBdd0Q S64 67,8
Error in line 61: Xlm S111 20,4
Error in line 59: eop S64 39,2
Error in line 57: bqjBmI A95 77,1
Error in line 66: rc8eFBdd0Q S631 197,6
Error in line 85: A95 S631 40,7
Error in line 88: A95 S111 2,6
Error in line 93: A95 A95 16,1
Error in line 99: 1F0 A95 55,9
Error in line 97: A95 S631 52,1
Error in line 94: Z2wpZSIWOWL S64 8,1
Error in line 122: rc8eFBdd0Q S64 217,4
Error in line 116: A95 S64 65,4
Error in line 132: eop A95 48,7
Error in line 133: rc8eFBdd0Q S64 87,5
Error in line 144: Z2wpZSIWOWL A95 35,24
Error in line 135: eop S64 16,2
Error in line 147: eop A95 91,0
Error in line 148: eop S631 65,1
Error in line 150: eop S111 43,2
Error in line 153: rc8eFBdd0Q S64 36,3
Error in line 160: rc8eFBdd0Q S64 63,6
Error in line 169: Xlm A95 30,5
Error in line 136: Z2wpZSIWOWL A95 26,4
Error in line 166: 1F0 A95 84,5
Error in line 170: Xlm S64 79,6
Error in line 175: A95 S64 53,2
Error in line 177: Z2wpZSIWOWL S631 94,1
Error in line 187: bqjBmI A95 22,2
Error in line 190: bqjBmI S64 33,6
Error in line 191: rc8eFBdd0Q A95 0,7
Error in line 205: eop S64 20,9
Error in line 218: eop S631 44,0
Error in line 224: Z2wpZSIWOWL S631 23,5
Error in line 213: Xlm S631 52,8
Error in line 233: Z2wpZSIWOWL S111 15,1
Error in line 238: A95 S631 81,4
Error in line 232: bqjBmI S64 5,3
